# api-facturas-transmind

./: .dockerignore  .env.example  .env.template  .gitignore  COMANDOS_TELEGRAM.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTACION_RESUMEN.md  PROCESAMIENTO_PDF.md  PRUEBAS_BOT.md  README.md  README_COMANDOS.md  SCHEMA_EXPLICACION.md  TELEGRAM_BOT_README.md  api-facturas.code-workspace  cloudbuild.yaml  config.py  create_tables_supabase.sql  database_add_invoice_items_table.sql  database_insert_anonymous_company.sql  database_migration_add_error_count.sql  database_schema.sql  deploy.sh  deploy_gcp.sh  docker-compose.yml  dump.rdb  main.py  pyproject.toml  shapely-2.0.7-cp39-cp39-macosx_11_0_arm64.whl  telegram_bot.py
app/models/: file_index.py
app/processors/: file_classifier.py  file_sorter.py  image_processor.py  pdf_processor.py  text_processor.py
app/routers/: storage.py  upload.py
app/schemas/: invoice_schema.py
app/services/: gemini_service copy.py  gemini_service.py  ocr_service.py  processing_orchestrator.py  storage_service.py  supabase_service.py  zip_handler.py
app/utils/: auth copy.py  auth.py  logger.py
